--- a/web/user/Welcome.xhtml
+++ b/web/user/Welcome.xhtml
@@ -35,9 +35,15 @@
                             </p:tab>
                             <p:tab title="TAXES TRIMESTRIELLES"><h:link outcome="/taxeTrim/List" value="TaxeTrim" style="font-family: Arial; font-size: 20px;"/>
                             </p:tab>
-                            <p:tab title="LISTES DES UTILISATEURS"><h:link outcome="/user/List" value="Users" style="font-family: Arial; font-size: 20px;"/>
+                            <p:tab title="LISTES DES UTILISATEURS"><h:link outcome="/user/AdminAccess" value="Users" style="font-family: Arial; font-size: 20px;"/>
                             </p:tab>
                             <p:tab title="ADRESSAGE"><h:link outcome="/rue/Adrressage" value="SYSTEME D'ADRESSAGE" style="font-family: Arial; font-size: 20px;"/>
+                                <p:tab title="CONECTED DEVICES"><h:link outcome="/device/List" value="Show All Device Items"/>
+                                </p:tab>
+                                <p:tab title="HISTORY"><h:link outcome="/historique/List" value="Show All Historique Items"/>
+                                </p:tab>
+                                <p:tab title="JOURNAL DES ACTIONS"><h:link outcome="/journal/List" value="Show All Journal Items"/>
+                                </p:tab>
                             </p:tab>
                         </p:accordionPanel>
                     </h:form>
