--- a/web/locale/List.xhtml
+++ b/web/locale/List.xhtml
@@ -34,19 +34,7 @@
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
-                        <!--             <p:column>
-                                             <f:facet name="header">
-                                                 <h:outputText value="#{bundle.ListLocaleTitle_dernierTrimestrePaiement}"/>
-                                             </f:facet>
-                                             <h:outputText value="#{item.dernierTrimestrePaiement}"/>
-                                         </p:column>
-                                         <p:column>
-                                             <f:facet name="header">
-                                                 <h:outputText value="#{bundle.ListLocaleTitle_dernierAnneePaiement}"/>
-                                             </f:facet>
-                                             <h:outputText value="#{item.dernierAnneePaiement}"/>
-                                         </p:column>
-                        -->
+                       
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListLocaleTitle_reference}"/>
@@ -58,13 +46,13 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListLocaleTitle_proprietaire}"/>
                             </f:facet>
-                            <h:outputText value="#{item.proprietaire.cin}"/>
+                            <h:outputText value="#{item.proprietaire.nom}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListLocaleTitle_gerant}"/>
                             </f:facet>
-                            <h:outputText value="#{item.gerant.cin}"/>
+                            <h:outputText value="#{item.gerant.nom}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
@@ -97,16 +85,7 @@
                             <h:outputText value="#{item.description}"/>
                         </p:column>
 
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListLocaleTitle_id}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.id}"/>
-                        </p:column>
-
-
-
-
+                      
                         <f:facet name="footer">
                             <p:commandButton class="btn btn-primary" id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{localeController.prepareCreate}" update=":LocaleCreateForm" oncomplete="PF('LocaleCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":LocaleViewForm" oncomplete="PF('LocaleViewDialog').show()" disabled="#{empty localeController.selected}"/>
